--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 node_js:
-  - "7"
+  - "stable"
 script:
+ - npm run build
  - echo "Beam me up, Scotty"
 install:
   - npm install -g firebase-tools
 after_success:
   - firebase deploy --project carlosanjos-dev --token $FIREBASE_TOKEN
+env:
+  - VUE_APP_GA=$VUE_APP_GA
