--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "tiptap": "^1.19.1",
+    "tiptap-extensions": "^1.19.1",
     "vue": "^2.6.6",
     "vue-analytics": "^5.16.4",
     "vue-class-component": "^6.0.0",
@@ -19,9 +21,9 @@
     "@mdi/font": "^3.5.95",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@vue/cli-service": "^3.7.0",
     "htmlhint": "^0.11.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
