--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^6.0.2",
     "tiptap": "^1.19.1",
-    "tiptap-extensions": "^1.19.1",
+    "tiptap-extensions": "^1.19.9",
     "vue": "^2.6.6",
     "vue-analytics": "^5.16.4",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.24",
     "vuetify": "^1.5.7"
   },
   "devDependencies": {
